envoy.yaml
static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: trip
              domains: ["*"]
              routes:
              - match:
                  prefix: "/v1/"
                route:
                  cluster: trip_grpc
                  timeout: 0s
          http_filters:
          # REST → gRPC Transcoding filter
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: "/data/protos.pb"
              services: ["trip.v1.TripService"]
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
          # Default router
          - name: envoy.filters.http.router

  clusters:
  - name: trip_grpc
    type: STRICT_DNS
    connect_timeout: 1s
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}   # enable gRPC
    load_assignment:
      cluster_name: trip_grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: trip-svc
                port_value: 50051

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
